refactor(cli): add dynamic prefix, removed swallowed params (#509)

--- a/golang/Makefile
+++ b/golang/Makefile
@@ -50,7 +50,7 @@ up:
 .PHONY: upd
 upd:
 	cd cmd/dyo && \
-	go run . --disable-crux --disable-crux-ui --imagetag latest up
+	go run . --disable-crux --disable-crux-ui --imagetag latest --prefix dyo-latest up
 
 .PHONY: down
 down:
