--- a/golang/Makefile
+++ b/golang/Makefile
@@ -20,9 +20,9 @@ LDFLAGS := -ldflags "-X '${PACKAGE}/internal/version.Version=${VCS_VERSION}'\
 # default tag is latest for building
 image_version ?= latest
 
-GOAIR=v1.40.4
-GOSEC=v2.14.0
-GOLANGCI=v1.50.1
+GOAIR=v1.42.0
+GOSEC=v2.15.0
+GOLANGCI=v1.51.2
 GOFUMPT=v0.4.0
 
 GOOS?=linux
@@ -134,7 +134,7 @@ security:
 # golangci for linting
 .PHONY: lint
 lint:
-	golangci-lint run  ./...
+	go mod tidy && golangci-lint run  ./...
 
 .PHONY: build-cli
 build-cli:
