ci: revert go mod tidy for consistency

--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -112,6 +112,8 @@ jobs:
           key: ${{ runner.os }}-golang-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-golang-
+      - name: Load go mod
+        run: go mod tidy
       # fixes: fatal: unsafe repository
       - name: Adding workspace
         run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
