refactor: add Container better builder interfacing (#517)
Refactor:
- default CLI to dyo-stable
- add Container, Builder interfaces and changed everywhere
- replace docker client.Client with its interface client.APIClient
- replace nginx image to fully qualified image names
- CLI: use data structures for repetitive tasks
- CLI: use builder hooks where applicable (Traefik file copy, migrating containers)
- CLI: One-off notification: func NotifyOnce(...)
Chore:
- bump golang version to 1.20
- upgrade direct dependencies
- fix gosec errors
- fix new lint errors
CI:
- add golang build cache steps to boost execution times, reduce repetition

--- a/golang/Makefile
+++ b/golang/Makefile
@@ -20,9 +20,9 @@ LDFLAGS := -ldflags "-X '${PACKAGE}/internal/version.Version=${VCS_VERSION}'\
 # default tag is latest for building
 image_version ?= latest
 
-GOAIR=v1.40.4
-GOSEC=v2.14.0
-GOLANGCI=v1.50.1
+GOAIR=v1.42.0
+GOSEC=v2.15.0
+GOLANGCI=v1.51.2
 GOFUMPT=v0.4.0
 
 GOOS?=linux
@@ -40,20 +40,28 @@ endif
 
 GOPARAMS:=GOOS=$(GOOS) CGO_ENABLED=0 $(GRPC_DEBUG_FLAGS)
 
+# cli start fully containerized stack, stable branch
 .PHONY: up
 up:
 	cd cmd/dyo && \
 	go run . up
 
+# cli stop
+.PHONY: down
+down:
+	cd cmd/dyo && \
+	go run . down
+
+# upd is short for up dev
 .PHONY: upd
 upd:
 	cd cmd/dyo && \
 	go run . --disable-crux --disable-crux-ui --prefix dyo-latest up
 
-.PHONY: down
-down:
+.PHONY: downd
+downd:
 	cd cmd/dyo && \
-	go run . down
+	go run . --prefix dyo-latest down
 
 .PHONY: go-crane
 go-crane:
