--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -6,6 +6,7 @@ on:
       - develop
       - main
     tags:
+      - "*"
   pull_request:
 
 permissions:
@@ -26,7 +27,7 @@ env:
   CRUX_UI_WORKING_DIRECTORY: web/crux-ui
   KRATOS_WORKING_DIRECTORY: web/kratos
   GOLANG_WORKING_DIRECTORY: golang
-  BUILDER_IMAGE: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+  BUILDER_IMAGE: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
 
 
 jobs:
@@ -94,7 +95,7 @@ jobs:
     runs-on: ubuntu-22.04
     needs: changes
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
     defaults:
       run:
         working-directory: ${{ env.GOLANG_WORKING_DIRECTORY }}
@@ -102,6 +103,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Golang caches
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/$GOCACHE
+            ~/$GOPATH/pkg/mod
+          key: ${{ runner.os }}-golang-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-golang-
       - name: Load go mod
         run: go mod tidy
       # fixes: fatal: unsafe repository
@@ -114,7 +124,7 @@ jobs:
     runs-on: ubuntu-22.04
     needs: changes
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
     defaults:
       run:
         working-directory: ${{ env.GOLANG_WORKING_DIRECTORY }}
@@ -122,6 +132,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Golang caches
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/$GOCACHE
+            ~/$GOPATH/pkg/mod
+          key: ${{ runner.os }}-golang-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-golang-
+        # fixes: fatal: unsafe repository
+      - name: Adding workspace
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - name: Load go mod
         run: go mod tidy
       - name: Run gosec
@@ -131,7 +153,7 @@ jobs:
     runs-on: ubuntu-22.04
     needs: changes
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
     defaults:
       run:
         working-directory: ${{ env.GOLANG_WORKING_DIRECTORY }}
@@ -139,6 +161,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Golang caches
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/$GOCACHE
+            ~/$GOPATH/pkg/mod
+          key: ${{ runner.os }}-golang-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-golang-
       - name: Load go mod
         run: go mod tidy
       # fixes: fatal: unsafe repository
@@ -153,13 +184,22 @@ jobs:
     runs-on: ubuntu-22.04
     needs: [go_security, go_lint, go_test, changes]
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
     defaults:
       run:
         working-directory: ${{ env.GOLANG_WORKING_DIRECTORY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Golang caches
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/$GOCACHE
+            ~/$GOPATH/pkg/mod
+          key: ${{ runner.os }}-golang-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-golang-
       # fixes: fatal: unsafe repository
       - name: Adding workspace
         run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
@@ -203,7 +243,7 @@ jobs:
       run:
         working-directory: ${{ env.CRUX_WORKING_DIRECTORY }}
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
     if: ${{ (needs.changes.outputs.crux == 'true') || (github.ref_type == 'tag') }}
     steps:
       - name: Checkout the repository
@@ -220,7 +260,7 @@ jobs:
       run:
         working-directory: ${{ env.CRUX_WORKING_DIRECTORY }}
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
     if: ${{ (needs.changes.outputs.crux == 'true') || (github.ref_type == 'tag') }}
     steps:
       - name: Checkout the repository
@@ -241,7 +281,7 @@ jobs:
     runs-on: ubuntu-22.04
     needs: [crux_test, crux_lint, changes]
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
     defaults:
       run:
         working-directory: ${{ env.CRUX_WORKING_DIRECTORY }}
@@ -263,7 +303,7 @@ jobs:
     runs-on: ubuntu-22.04
     needs: changes
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
     defaults:
       run:
         working-directory: ${{ env.CRUX_UI_WORKING_DIRECTORY }}
@@ -280,7 +320,7 @@ jobs:
     runs-on: ubuntu-22.04
     needs: [crux-ui_lint,changes]
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
     defaults:
       run:
         working-directory: ${{ env.CRUX_UI_WORKING_DIRECTORY }}
@@ -302,7 +342,7 @@ jobs:
     runs-on: ubuntu-22.04
     needs: changes
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
     defaults:
       run:
         working-directory: ${{ env.KRATOS_WORKING_DIRECTORY }}
@@ -451,7 +491,7 @@ jobs:
       packages: write
     runs-on: ubuntu-22.04
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
     needs: [go_build, e2e, changes]
     if: |
       always() &&
@@ -526,7 +566,7 @@ jobs:
       packages: write
     runs-on: ubuntu-22.04
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
     needs: [crux_build, e2e, changes]
     if: |
       always() &&
@@ -578,7 +618,7 @@ jobs:
       packages: write
     runs-on: ubuntu-22.04
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
     needs: [crux-ui_build, e2e, changes]
     if: |
       always() &&
@@ -630,7 +670,7 @@ jobs:
       packages: write
     runs-on: ubuntu-22.04
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-2
     needs: [kratos_build, e2e, changes]
     if: |
       always() &&
