--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -453,7 +453,7 @@ jobs:
           HUB_PROXY_TOKEN: ${{ secrets.HUB_PROXY_TOKEN }}
           E2E_BASE_URL: "http://dyo-e2e_traefik:8000"
           MAILSLURPER_URL: "http://dyo-e2e_mailslurper:4437"
-          CRUX_URL: "dyo-e2e_crux:5001"
+          CRUX_UI_URL: "http://dyo-e2e_traefik:8000"
           KRATOS_URL: "http://dyo-e2e_kratos:4433"
           KRATOS_ADMIN_URL: "http://dyo-e2e_kratos:4434"
           CI: true
