--- a/images/alpine-proto/Dockerfile
+++ b/images/alpine-proto/Dockerfile
@@ -12,7 +12,7 @@ RUN mkdir -p $GOPATH/src && \
     mkdir -p $GOPATH/cache && \
     mkdir -p $GOPATH/pkg
 
-RUN apk add nodejs npm alpine-sdk protoc protobuf-dev rsync docker git cosign zstd openssl1.1-compat
+RUN apk add nodejs npm alpine-sdk protoc protobuf-dev rsync docker git cosign zstd openssl1.1-compat bash
 
 RUN npm i -g \
         ts-proto@1.138.0 \
@@ -25,7 +25,9 @@ RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28 && \
 COPY ./golang/Makefile /tmp/
 RUN cd /tmp && make install-go-tools && rm Makefile && chmod -R 777 $GOPATH/
 
-RUN curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | ash
+RUN curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
+RUN curl -L -o /usr/bin/kubectl "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && chmod +x /usr/bin/kubectl
+
 
 WORKDIR /usr/work
 
