--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -173,7 +173,7 @@ jobs:
       - name: Load go mod
         run: go mod tidy
       - name: Init k3d
-        run: make k3d-init-ext && make k3d-config
+        run: make k3d-init
       - name: Run integration tests
         run: make test-integration
 
