--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -38,23 +38,26 @@
     "schema": "prisma/schema.prisma"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.8.11",
-    "@grpc/proto-loader": "^0.7.5",
+    "@grpc/grpc-js": "^1.8.13",
+    "@grpc/proto-loader": "^0.7.6",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/axios": "^2.0.0",
-    "@nestjs/cli": "^9.2.0",
-    "@nestjs/common": "^9.3.9",
+    "@nestjs/cli": "^9.3.0",
+    "@nestjs/common": "^9.3.12",
     "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.3.9",
-    "@nestjs/jwt": "^10.0.2",
-    "@nestjs/microservices": "^9.3.9",
+    "@nestjs/core": "^9.3.12",
+    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/microservices": "^9.3.12",
     "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.3.9",
-    "@nestjs/swagger": "^6.2.1",
+    "@nestjs/platform-express": "^9.3.12",
+    "@nestjs/platform-ws": "^9.3.12",
+    "@nestjs/swagger": "^6.3.0",
+    "@nestjs/websockets": "^9.3.12",
     "@ory/kratos-client": "^0.11.1",
-    "@prisma/client": "4.11.0",
+    "@prisma/client": "4.12.0",
     "@sendgrid/mail": "^7.7.0",
     "@types/google-protobuf": "^3.15.6",
+    "@types/ws": "^8.5.4",
     "@willsoto/nestjs-prometheus": "^5.1.0",
     "axios": "^1.3.4",
     "class-transformer": "^0.5.1",
@@ -66,41 +69,43 @@
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "pg": "^8.9.0",
-    "prom-client": "^14.1.1",
+    "pg": "^8.10.0",
+    "prom-client": "^14.2.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^4.1.2",
+    "rimraf": "^4.4.1",
     "rxjs": "^7.8.0",
+    "uuid": "^9.0.0",
+    "ws": "^8.13.0",
     "www-authenticate": "^0.6.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^9.0.4",
-    "@nestjs/testing": "^9.3.9",
+    "@nestjs/schematics": "^9.1.0",
+    "@nestjs/testing": "^9.3.12",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.2",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
     "@types/nodemailer": "^6.4.7",
     "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
-    "eslint": "^8.35.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.37.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.4.3",
-    "prettier": "^2.8.4",
-    "prisma": "4.11.0",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.7",
+    "prisma": "4.12.0",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^3.14.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.9.5"
   },
   "packages": {
